<resources>
    <string name="app_name">Weather App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_country">Search city</string>
    <string name="explore">Explore</string>
    <string name="sun">sun</string>
    <string name="suggested_clothes">Suggested Clothes</string>
    <string name="weather_state">weather_state</string>
    <string name="feels_like">Feels</string>
    <string name="humidity">Humidity</string>
    <string name="rain">Rain</string>
    <string name="uv">UV</string>
    <string name="wind">Wind</string>
    <string name="degree">degree</string>
    <string name="search_card">search_card</string>


</resources>